@@ -1,3 +1,8 @@
+20040212
+ - (tim) [Makefile.in regress/sftp-badcmds.sh regress/test-exec.sh]
+   Portablity fixes. Data sftp transfers needs to be world readable. Some
+   older shells hang on while loops when  doing sh -n some_script. OK dtucker@
+
 20040211
  - (dtucker) [auth-passwd.c auth-shadow.c] Only enable shadow expiry check
    if HAS_SHADOW_EXPIRY is set.
